--- a/advanced_vat_invoice/report/vat_invoice_report_templates.xml
+++ b/advanced_vat_invoice/report/vat_invoice_report_templates.xml
@@ -158,13 +158,20 @@
                              style="margin-top: -8pt; padding-left:30pt;">
 
 
+							<t t-if="doc.company_id.country_id.code == 'SA' and doc.x_zatca_qr_str">
+							  <img t-att-src="'/report/barcode/?type=QR&amp;value=%s&amp;width=120&amp;height=120' % doc.x_zatca_qr_str"/>
+							</t>
+							
+														
+
+<!--
 							<t t-if="doc.company_id.country_id.code == 'SA'">
 							  <t t-set="qr_val" t-value="(getattr(doc, 'qr_code_str', False) or getattr(doc, 'qr_code', False) or getattr(doc, 'qr', False) or '')"/>
 							  <t t-if="qr_val">
 							    <img t-att-src="'/report/barcode/?type=QR&amp;value=%s&amp;width=120&amp;height=120' % qr_val"/>
 							  </t>
 							</t>
-
+-->
 							
 						 <!--
 							<t t-if="doc.company_id.country_id.code == 'SA'">
