--- a/advanced_vat_invoice/report/vat_invoice_report_templates.xml
+++ b/advanced_vat_invoice/report/vat_invoice_report_templates.xml
@@ -157,11 +157,14 @@
                         <div class="col-3"
                              style="margin-top: -8pt; padding-left:30pt;">
 
-
+<t t-if="doc.company_id.country_id.code == 'SA' and doc.qr_str">
+  <img t-att-src="'/report/barcode/?type=QR&amp;value=%s&amp;width=120&amp;height=120' % doc.qr_str"/>
+</t>
+<!--
 							<t t-if="doc.company_id.country_id.code == 'SA' and doc.x_zatca_qr_str">
 							  <img t-att-src="'/report/barcode/?type=QR&amp;value=%s&amp;width=120&amp;height=120' % doc.x_zatca_qr_str"/>
 							</t>
-							
+			-->				
 														
 
 <!--
